fix(reader): default text align should be auto, not left (PR #815 Fixes #809)

--- a/src/renderer/assets/styles/reader-app.css
+++ b/src/renderer/assets/styles/reader-app.css
@@ -792,7 +792,7 @@ p.chapters_description {
   width: 63px;
 }
 
-#option_gauche, #option_justif,
+#option_auto, #option_justif,
 #scroll_option, #page_option {
   display: inline-block;
   text-align: center;
